// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`스냅샷 — 네 크기 1x1 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "columnGap": 2,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 8,
        "rowGap": 2,
      }
    }
    testID="widget-reset-countdown"
  >
    <Text
      style={
        {
          "color": "#645C42",
          "fontSize": 9,
          "fontWeight": "700",
        }
      }
    >
      초기화까지
    </Text>
    <Text
      style={
        {
          "color": "#645C42",
          "fontSize": 9.5,
        }
      }
      testID="reset-label-daily"
    >
      일일
    </Text>
    <Text
      numberOfLines={1}
      style={
        {
          "color": "#241208",
          "fontSize": 13,
          "fontVariant": [
            "tabular-nums",
          ],
          "fontWeight": "700",
        }
      }
      testID="reset-value-daily"
    >
      12시간
    </Text>
  </View>
</View>
`;

exports[`스냅샷 — 네 크기 2x1 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 4,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 4,
      }
    }
    testID="widget-reset-countdown"
  >
    <Text
      style={
        {
          "color": "#645C42",
          "fontSize": 10,
          "fontWeight": "700",
        }
      }
    >
      초기화까지
    </Text>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
      testID="reset-row-daily"
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10.5,
            }
          }
          testID="reset-label-daily"
        >
          일일
        </Text>
        <View
          style={
            {
              "marginLeft": "auto",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
            testID="reset-value-daily"
          >
            12시간 34분 0초
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
      testID="reset-row-weekly"
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10.5,
            }
          }
          testID="reset-label-weekly"
        >
          주간
        </Text>
        <View
          style={
            {
              "marginLeft": "auto",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
            testID="reset-value-weekly"
          >
            2일 12시간
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`스냅샷 — 네 크기 2x2 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 8,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 8,
      }
    }
    testID="widget-reset-countdown"
  >
    <Text
      style={
        {
          "color": "#645C42",
          "fontSize": 10,
          "fontWeight": "700",
        }
      }
    >
      초기화까지
    </Text>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
      testID="reset-row-daily"
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10.5,
            }
          }
          testID="reset-label-daily"
        >
          일일
        </Text>
        <View
          style={
            {
              "marginLeft": "auto",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
            testID="reset-value-daily"
          >
            12시간 34분 0초
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "height": 4,
            "overflow": "hidden",
            "width": "100%",
          }
        }
        testID="reset-bar"
      >
        <View
          style={
            {
              "backgroundColor": "#F58B0F",
              "height": 4,
              "width": "47.64%",
            }
          }
          testID="reset-bar-fill"
        />
      </View>
    </View>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
      testID="reset-row-weekly"
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10.5,
            }
          }
          testID="reset-label-weekly"
        >
          주간
        </Text>
        <View
          style={
            {
              "marginLeft": "auto",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
            testID="reset-value-weekly"
          >
            2일 12시간
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "height": 4,
            "overflow": "hidden",
            "width": "100%",
          }
        }
        testID="reset-bar"
      >
        <View
          style={
            {
              "backgroundColor": "#F58B0F",
              "height": 4,
              "width": "64.29%",
            }
          }
          testID="reset-bar-fill"
        />
      </View>
    </View>
    <View
      style={
        {
          "columnGap": 2,
          "rowGap": 2,
        }
      }
      testID="reset-row-monthly"
    >
      <View
        style={
          {
            "alignItems": "baseline",
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10.5,
            }
          }
          testID="reset-label-monthly"
        >
          월간
        </Text>
        <View
          style={
            {
              "marginLeft": "auto",
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#241208",
                "fontSize": 11.5,
                "fontVariant": [
                  "tabular-nums",
                ],
                "fontWeight": "700",
              }
            }
            testID="reset-value-monthly"
          >
            13일 12시간
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "backgroundColor": "#E4E1CE",
            "borderRadius": 9999,
            "height": 4,
            "overflow": "hidden",
            "width": "100%",
          }
        }
        testID="reset-bar"
      >
        <View
          style={
            {
              "backgroundColor": "#F58B0F",
              "height": 4,
              "width": "56.45%",
            }
          }
          testID="reset-bar-fill"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`스냅샷 — 네 크기 4x1 1`] = `
<View
  style={
    {
      "backgroundColor": "#F2F0E2",
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  <View
    style={
      {
        "columnGap": 4,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "justifyContent": "center",
        "padding": 12,
        "rowGap": 4,
      }
    }
    testID="widget-reset-countdown"
  >
    <Text
      style={
        {
          "color": "#645C42",
          "fontSize": 10,
          "fontWeight": "700",
        }
      }
    >
      초기화까지
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "columnGap": 8,
          "flexDirection": "row",
          "rowGap": 8,
        }
      }
    >
      <View
        style={
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
        testID="reset-cell-daily"
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10,
            }
          }
          testID="reset-label-daily"
        >
          일일
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 16,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
            }
          }
          testID="reset-value-daily"
        >
          12시간 34분
        </Text>
      </View>
      <View
        style={
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
        testID="reset-cell-weekly"
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10,
            }
          }
          testID="reset-label-weekly"
        >
          주간
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 16,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
            }
          }
          testID="reset-value-weekly"
        >
          2일 12시간
        </Text>
      </View>
      <View
        style={
          {
            "flexBasis": "0%",
            "flexGrow": 1,
            "flexShrink": 1,
          }
        }
        testID="reset-cell-monthly"
      >
        <Text
          style={
            {
              "color": "#645C42",
              "fontSize": 10,
            }
          }
          testID="reset-label-monthly"
        >
          월간
        </Text>
        <Text
          numberOfLines={1}
          style={
            {
              "color": "#241208",
              "fontSize": 16,
              "fontVariant": [
                "tabular-nums",
              ],
              "fontWeight": "700",
            }
          }
          testID="reset-value-monthly"
        >
          13일 12시간
        </Text>
      </View>
    </View>
  </View>
</View>
`;
